# LinuxSourceMirror

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  config.py  mirror-server  mirror-server-conf.json  runstatus.py  tags
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
client/: __init__.py  rsync.py
include/LinuxSourceMirror/common/: path.h
include/LinuxSourceMirror/common/interfaces/: i_create_func.h  i_singleton.h
server/: __init__.py  http.py
source/common/: err.cc  path.cc
sources/: main.rs
sources/common/: mod.rs
sources/config/: config_macros.rs  mod.rs
src/: main.rs
src/config/: mod.rs
src/logger/: mod.rs
